add: logo-color.png to images. use: logo on index.html and readme.md

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <title>Dive In</title>
 </head>
 <body>
-   <header>
-
+   <header class="container-fluid">
+    
+        <div class="row">
+            <div class="col">
+                <img src="assets/images/logo-color.png" alt="Dive In logo">
+            </div>
+        </div>
+    
    </header>
    <main>
 
