add:menu bar with links to parts of the page. add:font awesome icons to menu

--- a/index.html
+++ b/index.html
@@ -20,12 +20,39 @@
                         <h1 class="name">Your first stop for information on Diversity and Inclusion!</h1>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col">
+                        <ul id="nav" class="list-inline">
+                            <li class="col-6 col-md-2 list-inline-item menu-definition">
+                                <a href="#definition">
+                                    <i class="fa-solid fa-question"></i>definition
+                                </a>
+                            </li>
+                            <li class="col-6 col-md-2 list-inline-item menu-legislation">
+                                <a href="#legislation">
+                                    <i class="fa-solid fa-gavel"></i>legislation
+                                </a>
+                            </li>
+                            <li class="col-6 col-md-2 list-inline-item menu-groups">
+                                <a href="#groups">
+                                    <i class="fa-solid fa-people-group"></i>Support Groups
+                                </a>
+                            </li>
+                            <li class="col-6 col-md-2 list-inline-item menu-contact">
+                                <a href="#contact">
+                                    <i class="fa-regular fa-life-ring"></i>Contact Form
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
    </header>
    <main class="container">
         <div class="row">
-            <div class="col-md-4 min-groups section-column">
+            <div class="col-md-4 min-groups section-column" id="minority-groups">
                 <div class="row">
                     <div class="col-12">
                         <h2>minority groups</h2>
@@ -43,20 +70,20 @@
                         <h2>Further Information</h2>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="definition">
                     <div class="col">
                         <h3>Definition</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="legislation">
                     <div class="col">
                         <h3>Legislation</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="contact">
                 <div class="col">
                     there will be a form here
                 </div>
