to send alex git link

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Dosis:wght@200..800&display=swap" rel="stylesheet">
     <title>Dive In</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
    <header class="container-fluid">
         <div class="row">
             <img  class="col-md-4 logo" src="assets/images/logo-color-crop.png" alt="Logo"></a>
-            <div class="col-md-8" >
+            <div class="col-md-8 bg-color-header" >
                 <div class="row">
                     <div class="col">
                         <h1 class="name">Your first stop for information on Diversity and Inclusion!</h1>
