remove: background image from mobile site

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
    <header class="container-fluid">
         <div class="row">
             <img  class="col-md-4 logo" src="assets/images/logo-color-crop.png" alt="Logo"></a>
-            <div class="col-md-8 bg-color-header" >
+            <div class="col-12 col-md-8 bg-image-header" >
                 <div class="row">
                     <div class="col">
-                        <h1 class="name">Your first stop for information on Diversity and Inclusion!</h1>
+                        <h2 class="name">Your first stop for information on Diversity and Inclusion!</h2>
                     </div>
                 </div>
+            </div>
+            
                 <div class="row">
-                    <div class="col">
+                    <div class="col-12">
                         <ul id="nav" class="list-inline">
                             <li class="col-6 col-md-2 list-inline-item menu-definition">
                                 <a href="#definition">
@@ -47,8 +49,7 @@
                         </ul>
                     </div>
                 </div>
-
-            </div>
+            
         </div>
    </header>
    <main class="container">
@@ -56,7 +57,7 @@
             <div class="col-md-4 min-groups section-column" id="minority-groups">
                 <div class="row">
                     <div class="col-12">
-                        <h2>minority groups</h2>
+                        <h3>minority groups</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -68,7 +69,7 @@
             <div class="col-md-8 def-leg section-column">
                 <div class="row">
                     <div class="col">
-                        <h2>Further Information</h2>
+                        <h3>Further Information</h3>
                     </div>
                 </div>
                 <div class="row" id="definition">
