modify: nav bar elements, add: protexted charcteristics content

--- a/index.html
+++ b/index.html
@@ -28,33 +28,36 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <ul id="nav" class="list-inline main-menu">
-                    <li class="col-6 col-sm-3 list-inline-item menu-definition">
-                        <a href="#definition">
-                            <i class="fa-solid fa-question"></i>definition
-                        </a>
-                    </li>
-                    <li class="col-6 col-sm-3 list-inline-item menu-legislation">
-                        <a href="#legislation">
-                            <i class="fa-solid fa-gavel"></i>legislation
-                        </a>
-                    </li>
-                    <li class="col-6 col-sm-3 list-inline-item menu-groups">
-                        <a href="#groups">
-                            <i class="fa-solid fa-people-group"></i>Support Groups
-                        </a>
-                    </li>
-                    <li class="col-6 col-sm-3 list-inline-item menu-contact">
-                        <a href="#contact">
-                            <i class="fa-regular fa-life-ring"></i>Contact Form
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
 
+
+<!--    trying new nav bar -->
+    
+<div class="container">
+    <div class="row">
+      <div class="col-12 col-md-3">
+        <a href="#definition">
+            <i class="fa-solid fa-question"></i>definition
+        </a>
+      </div>
+      <div class="col-12 col-md-3">
+        <a href="#legislation">
+            <i class="fa-solid fa-gavel"></i>legislation
+        </a>
+      </div>
+      <div class="col-12 col-md-3">
+        <a href="#groups">
+            <i class="fa-solid fa-people-group"></i>Support Groups
+        </a>
+      </div>
+      <div class="col-12 col-md-3">
+        <a href="#contact">
+            <i class="fa-regular fa-life-ring"></i>Contact Form
+        </a>
+      </div>
+    </div>
+</div>
+
+  <!-- end of new task bar -->
 
     </header>
     <main class="container-fluid">
@@ -62,16 +65,25 @@
             <div class="col-md-4 min-groups section-column" id="minority-groups">
                 <div class="row">
                     <div class="col-12">
-                        <h3>minority groups</h3>
+                        <h3>Protected Characteristics</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>The Equality Act 2010 protects people against discrimination on 
+                            the grounds of the following protected characteristics:
+                            <ul>
+                                <li>Age</li>
+                                <li>Disability</li>
+                                <li>Gender Reassignment</li>
+                                <li>Marriage & Civil Partnership</li>
+                                <li>Pregnancy & Maternity</li>
+                                <li>Race</li>
+                                <li>Religion or Belief</li>
+                                <li>Sex</li>
+                                <li>sexual Orientation</li>
+                            </ul>
+                        </p>
                     </div>
                 </div>
             </div>
