add color to nav bar and links

--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
         <!--    trying new nav bar -->
 
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-3">
+            <div class="row nav-links">
+                <div class="col-12 col-md-3 menu-color-definition nav-links">
                     <a href="#definition">
                         <i class="fa-solid fa-question"></i>What Is It?
                     </a>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-3 menu-color-legislation nav-links">
                     <a href="#legislation">
                         <i class="fa-solid fa-gavel"></i>The Law
                     </a>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-3 menu-color-support nav-links">
                     <a href="#support">
                         <i class="fa-solid fa-people-group"></i>Getting Support
                     </a>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-3 menu-color-contact nav-links">
                     <a href="#contact">
                         <i class="fa-regular fa-life-ring"></i>Contact Form
                     </a>
@@ -129,18 +129,18 @@
             </div>
         </div>
         <div class="container">
-            <div class="row" id="support">
-                <div class="col-12 col-md-3">
+            <div class="row " id="support">
+                <div class="col-12 col-md-3 support-employers nav-links">
                     <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" target="_blank">
                         <i class="fa-solid fa-question"></i>Employers
                     </a>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-3 support-education nav-links">
                     <a href="https://www.plymouth.ac.uk/about-us/teaching-and-learning/inclusivity/how-can-i-be-more-inclusive" target="_blank">
                         <i class="fa-solid fa-gavel"></i>Education
                     </a>
                 </div>
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-3 support-general nav-links">
                     <a href="https://www.citizensadvice.org.uk/" target="_blank">
                         <i class="fa-solid fa-people-group"></i>General Advice
                     </a>
