adjust: sizes of links

--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
         </div>
 
 
-        <!--    trying new nav bar -->
+        <!--     nav bar -->
 
         <div class="container">
             <div class="row nav-links">
                 <div class="col-12 col-md-3 menu-color-definition nav-links">
                     <a href="#definition">
-                        <i class="fa-solid fa-question"></i>What Is It?
+                        <i class="fa-solid fa-question"></i><span>What Is It?</span>
                     </a>
                 </div>
                 <div class="col-12 col-md-3 menu-color-legislation nav-links">
                     <a href="#legislation">
-                        <i class="fa-solid fa-gavel"></i>The Law
+                        <i class="fa-solid fa-gavel"></i><span>The Law</span>
                     </a>
                 </div>
                 <div class="col-12 col-md-3 menu-color-support nav-links">
                     <a href="#support">
-                        <i class="fa-solid fa-people-group"></i>Getting Support
+                        <i class="fa-solid fa-people-group"></i><span>Getting Support</span>
                     </a>
                 </div>
                 <div class="col-12 col-md-3 menu-color-contact nav-links">
                     <a href="#contact">
-                        <i class="fa-regular fa-life-ring"></i>Contact Form
+                        <i class="fa-regular fa-life-ring"></i><span>Contact Form</span>
                     </a>
                 </div>
             </div>
@@ -61,10 +61,16 @@
 
     </header>
     <main class="container-fluid">
-        <div class="row">
+
+<!-- main info-->
+
+        <div class="row container">
+
+<!-- protected characteristics-->
+
             <div class="col-md-4 min-groups section-column" id="minority-groups">
-                <div class="row">
-                    <div class="col-12">
+                <div class="row container">
+                    <div class="col-12 protected-image">
                         <h3>Protected Characteristics</h3>
                     </div>
                 </div>
@@ -91,12 +97,20 @@
                     </div>
                 </div>
             </div>
+
+
+<!-- further info-->
+
+
             <div class="col-md-8 def-leg section-column">
                 <div class="row">
                     <div class="col">
                         <h3>Further Information</h3>
                     </div>
                 </div>
+
+<!-- definition-->
+
                 <div class="row" id="definition">
                     <div class="col">
                         <h3>What Is It?</h3>
@@ -111,6 +125,9 @@
                         </p>
                     </div>
                 </div>
+
+<!--legislation-->
+
                 <div class="row" id="legislation">
                     <div class="col">
                         <h3>Legislation</h3>
@@ -128,25 +145,31 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row " id="support">
+
+<!--links to support groups-->
+
+        <div class="container" id="support">
+            <div class="row " >
                 <div class="col-12 col-md-3 support-employers nav-links">
                     <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" target="_blank">
-                        <i class="fa-solid fa-question"></i>Employers
+                        <i class="fa-solid fa-question"></i><span>Employers</span>
                     </a>
                 </div>
                 <div class="col-12 col-md-3 support-education nav-links">
                     <a href="https://www.plymouth.ac.uk/about-us/teaching-and-learning/inclusivity/how-can-i-be-more-inclusive" target="_blank">
-                        <i class="fa-solid fa-gavel"></i>Education
+                        <i class="fa-solid fa-gavel"></i><span>Education</span>
                     </a>
                 </div>
                 <div class="col-12 col-md-3 support-general nav-links">
                     <a href="https://www.citizensadvice.org.uk/" target="_blank">
-                        <i class="fa-solid fa-people-group"></i>General Advice
+                        <i class="fa-solid fa-people-group"></i><span>General Advice</span>
                     </a>
                 </div>
             </div>
         </div>
+
+<!-- contact form-->
+
         <div class="row" id="contact">
             <div class="col">
                 <h4>Please get in touch for more support or information.</h4>
@@ -167,6 +190,10 @@
         </div>
 
     </main>
+
+<!-- footer-->
+
+
     <footer class="container">
         <div class="row">
             <div class="col-12 col-md-3">
