--- a/index.html
+++ b/index.html
@@ -24,8 +24,19 @@
 </head>
 
 <body>
+
+    <div class="jumbotron ">
+        <!-- <div class="container"> -->
+        <h1 class="display-4">Dive In...</h1>
+        <p class="lead">...to diversity and inclusion. </p>
+        <!-- <hr class="my-4"> -->
+        <a class="btn btn-primary btn-sm" href="#contact" role="button">Request Info</a>
+        <!-- </div> -->
+      </div>
+
+
     <header class="container-fluid">
-        <div class="row">
+        <!-- <div class="row">
             <img class="col-md-4 logo" src="assets/images/logo-color-crop.png" alt="Logo"></a>
             <div class="col-12 col-md-8 bg-image-header">
                 <div class="row">
@@ -34,12 +45,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
         <!--     nav bar -->
 
-        <div class="container">
+        <!-- <div class="container">
             <div class="row nav-links">
                 <div class="col-12 col-md-3 menu-color-definition nav-links">
                     <a href="#definition">
@@ -62,7 +73,30 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Dive In</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#definition">Definition</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#legislation">Legislation</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#support">Support Groups</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#contact">Request Information</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
 
         <!-- end of new task bar -->
 
