add borders to support group links, change: icons for support group links

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 <body>
 
+<!-- Jumbotron -->
+
     <div class="jumbotron ">
         <!-- <div class="container"> -->
         <h1 class="display-4">Dive In...</h1>
@@ -36,45 +38,8 @@
 
 
     <header class="container-fluid">
-        <!-- <div class="row">
-            <img class="col-md-4 logo" src="assets/images/logo-color-crop.png" alt="Logo"></a>
-            <div class="col-12 col-md-8 bg-image-header">
-                <div class="row">
-                    <div class="col">
-                        <h2 class="name">Your first stop for information on Diversity and Inclusion!</h2>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
-
-        <!--     nav bar -->
-
-        <!-- <div class="container">
-            <div class="row nav-links">
-                <div class="col-12 col-md-3 menu-color-definition nav-links">
-                    <a href="#definition">
-                        <i class="fa-solid fa-question"></i><span>What Is It?</span>
-                    </a>
-                </div>
-                <div class="col-12 col-md-3 menu-color-legislation nav-links">
-                    <a href="#legislation">
-                        <i class="fa-solid fa-gavel"></i><span>The Law</span>
-                    </a>
-                </div>
-                <div class="col-12 col-md-3 menu-color-support nav-links">
-                    <a href="#support">
-                        <i class="fa-solid fa-people-group"></i><span>Getting Support</span>
-                    </a>
-                </div>
-                <div class="col-12 col-md-3 menu-color-contact nav-links">
-                    <a href="#contact">
-                        <i class="fa-regular fa-life-ring"></i><span>Contact Form</span>
-                    </a>
-                </div>
-            </div>
-        </div> -->
-
+        
+<!--     nav bar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Dive In</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -99,12 +64,11 @@
             </div>
         </nav>
 
-        <!-- end of new task bar -->
 
     </header>
     <main class="container-fluid">
 
-        <!-- main info-->
+        <!-- Protected Characteristics --> 
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-4 prot-char">
@@ -133,10 +97,10 @@
                 </div>
             </div>
         </div>
-
+        <!-- Definition --> 
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-4 what">
+                <div class="col-12 col-md-4 what" id="definition">
                     <h3>What Is It?</h3>
                 </div>
                 <div class="col-12 col-md-4 what-text">
@@ -154,10 +118,10 @@
                 </div>
             </div>
         </div>
-
+        <!-- Legislation --> 
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-4 legislation">
+                <div class="col-12 col-md-4 legislation" id="legislation">
                     <h3>Current Legislation</h3>
                 </div>
                 <div class="col-12 col-md-4 legislation-text">
@@ -177,106 +141,25 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="row container"> -->
-
-            <!-- protected characteristics-->
-
-            <!-- <div class="col-md-4 min-groups section-column" id="minority-groups">
-                <div class="row container-fluid">
-                    <div class="col-12 protected-image">
-                        <h3>Protected Characteristics</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <p>The Equality Act 2010 protects people against discrimination on
-                            the grounds of the following protected characteristics:
-                            <ul>
-                                <li>Age</li>
-                                <li>Disability</li>
-                                <li>Gender Reassignment</li>
-                                <li>Marriage & Civil Partnership</li>
-                                <li>Pregnancy & Maternity</li>
-                                <li>Race</li>
-                                <li>Religion or Belief</li>
-                                <li>Sex</li>
-                                <li>Sexual Orientation</li>
-                            </ul>
-                            <br>
-                            To find out more on any of these groups, if you feel you may
-                            have a grievance or for more infornation on any ralated topic please
-                            fill out the contact form below.
-                        </p>
-                    </div>
-                </div>
-            </div> -->
-
-
-            <!-- further info-->
-
-
-            <!-- <div class="col-md-8 def-leg section-column">
-                <div class="row">
-                    <div class="col">
-                        <h3>Further Information</h3>
-                    </div>
-                </div>
-
-             definition
-
-                <div class="row" id="definition">
-                    <div class="col">
-                        <h3>What Is It?</h3>
-                        <p>Diversity and inclusion are closely linked values
-                            held by many organizations that are working to be supportive of
-                            different groups of individuals, including people of different races,
-                            ethnicities, religions, abilities, genders, and sexual orientations.
-                            <br><br>Legislation is in place to protect people in both the workplace and
-                            everyday life however many employers, social groups, sports clubs etc work
-                            towards creating a 'Just Culture' where every individual is valued, treated
-                            equally and with respect.
-                        </p>
-                    </div>
-                </div> -->
-
-                <!--legislation-->
-
-                <!-- <div class="row" id="legislation">
-                    <div class="col">
-                        <h3>Legislation</h3>
-                        <p>The Equality Act 2010 legally protects people from discrimination in the
-                            workplace and in wider society. <br><br>
-
-                            It replaced previous anti-discrimination laws with a single Act, making t
-                            he law easier to understand and strengthening protection in some situations.
-                            It sets out the different ways in which it is unlawful to treat someone. <br><br>
-
-                            To find out more about who is protected from discrimination, the types of
-                            discrimination under the law and what action you can take if you feel you
-                            have been unfairly discriminated against click here.</p>
-                    </div>
-                </div>
-            </div>
-        </div>  -->
-
+   
         <!--links to support groups-->
 
         <div class="container" id="support">
             <div class="row ">
-                <div class="col-12 col-md-3 support-employers nav-links">
+                <div class="col-12 col-md-4 support-employers nav-links">
                     <a href="https://www.acas.org.uk/improving-equality-diversity-and-inclusion" target="_blank">
-                        <i class="fa-solid fa-question"></i><span>Employers</span>
+                        <i class="fa-solid fa-helmet-safety"></i><span>Employers</span>
                     </a>
                 </div>
-                <div class="col-12 col-md-3 support-education nav-links">
+                <div class="col-12 col-md-4 support-education nav-links">
                     <a href="https://www.plymouth.ac.uk/about-us/teaching-and-learning/inclusivity/how-can-i-be-more-inclusive"
                         target="_blank">
-                        <i class="fa-solid fa-gavel"></i><span>Education</span>
+                        <i class="fa-solid fa-person-chalkboard"></i><span>Education</span>
                     </a>
                 </div>
-                <div class="col-12 col-md-3 support-general nav-links">
+                <div class="col-12 col-md-4 support-general nav-links">
                     <a href="https://www.citizensadvice.org.uk/" target="_blank">
-                        <i class="fa-solid fa-people-group"></i><span>General Advice</span>
+                        <i class="fa-solid fa-circle-info"></i><span>General Advice</span>
                     </a>
                 </div>
             </div>
@@ -284,7 +167,7 @@
 
         <!-- contact form-->
 
-        <div class="row" id="contact">
+        <!-- <div class="row" id="contact">
             <div class="col">
                 <h4>Please get in touch for more support or information.</h4>
                 <div class="center-form">
@@ -301,7 +184,7 @@
                     </form>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </main>
 
