--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="diversity, inclusion, equality, employment, education">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/3793f6063a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -196,29 +197,21 @@
 
     <footer class="container">
         <div class="row">
-            <div class="col-12 col-md-3">
+            <div class="col-6 col-md-3">
                 CONTACT US
-
             </div>
-            <!-- <div class="row">
-            <div class="col-12 col-md-3">
-                <span><i class="fa-solid fa-phone"></i>01234 567890</span>
-                <span><i class="fa-solid fa-email"></i>info@divein.com</span>
-                <span> <a href="#"></a>
-                    <i class="fa-solid fa-web"></i>www.divein.com
-                </a></span>
-        </div> -->
-            <div class="col-4">
+  
+            <div class="col-6 col-md-3">
 
                 <i class="fa-solid fa-phone"></i>01234 567890
 
             </div>
-            <div class="col-4">
+            <div class="col-6 col-md-3">
 
                 <i class="fa-solid fa-email"></i>info@divein.com
 
             </div>
-            <div class="col-4">
+            <div class="col-6 col-md-3">
                 <a href="#">
                     <i class="fa-solid fa-web"></i>www.divein.com
                 </a>
