add: link for emlegal info

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
                         To find out more about who is protected from discrimination, the types of
                         discrimination under the law and what action you can take if you feel you
-                        have been unfairly discriminated against click here.</p>
+                        have been unfairly discriminated against click <a href="https://www.gov.uk/guidance/equality-act-2010-guidance" target="_blank">HERE!</a></p>
                     </p>
                 </div>
                 <div class="col-12 col-md-4 legislation-image">
