--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="nav-link" href="#legislation">Legislation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#support">Support Groups</a>
+                        <a class="nav-link" href="#support">Get Support</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Request Information</a>
