add: follow up html test information, rectify: errors in html code

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 
         <!-- Protected Characteristics -->
         <div class="container">
-            <div class="row">
+            <div class="row remove-p">
                 <div class="col-12 col-md-4 prot-char">
                     <h3>Protected Characteristics</h3>
                 </div>
                 <div class="col-12 col-md-4 prot-char-text">
-                    <p>The Equality Act 2010 protects people against discrimination on
+                    The Equality Act 2010 protects people against discrimination on
                         the grounds of the following protected characteristics:
                         <ul>
                             <li>Age</li>
@@ -96,7 +96,7 @@
                         To find out more on any of these groups, if you feel you may
                         have a grievance or for more infornation on any related topic please
                         fill out the contact form below.
-                    </p>
+                    
                 </div>
                 <div class="col-12 col-md-4 protect-image">
                 </div>
@@ -130,7 +130,7 @@
                     <h3>Current Legislation</h3>
                 </div>
                 <div class="col-12 col-md-4 legislation-text">
-                    <p>The Equality Act 2010 legally protects people from discrimination in the
+                    The Equality Act 2010 legally protects people from discrimination in the
                         workplace and in wider society. <br><br>
 
                         It replaced previous anti-discrimination laws with a single Act, making t
@@ -139,8 +139,8 @@
 
                         To find out more about who is protected from discrimination, the types of
                         discrimination under the law and what action you can take if you feel you
-                        have been unfairly discriminated against click <a href="https://www.gov.uk/guidance/equality-act-2010-guidance" target="_blank">HERE!</a></p>
-                    </p>
+                        have been unfairly discriminated against click <a href="https://www.gov.uk/guidance/equality-act-2010-guidance" target="_blank">HERE!</a>
+                    
                 </div>
                 <div class="col-12 col-md-4 legislation-image">
                 </div>
