update:README.md to include Reflections, Future Improvements

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <main class="container-fluid">
 
         <!-- Protected Characteristics -->
-        <!-- <div class="container"> -->
+        <div class="container">
             <div class="row remove-p">
                 <div class="col-12 col-md-4 prot-char">
                     <h3>Protected Characteristics</h3>
@@ -105,7 +105,7 @@
                 <div class="col-12 col-md-4 protect-image">
                 </div>
             </div>
-        <!-- </div> -->
+        </div>
         <!-- Definition -->
         <div class="container">
             <div class="row">
